@@ -17,3 +17,4 @@
 16|MULTIPOINT(0 0,1 1,2 2)
 17|MULTIPOINT(0 0,4 4)
 18|POLYGON((-215922 5325694,-218693 5322119,-216112 5325812,-215922 5325694))
+19|POLYGON((0 0,10 0,10 10,0 10,0 0))|BOX(0 0,10 10)
